--- a/notebooks/W01. Python Recap.ipynb
+++ b/notebooks/W01. Python Recap.ipynb
@@ -1120,9 +1120,9 @@
         "import matplotlib\n",
         "%matplotlib inline\n",
         "\n",
-        "#!mkdir data1 #new directory called data1\n",
-        "#!mkdir ./data1/wk1\n",
-        "#!curl https://storage.googleapis.com/qm2/wk1/spotify-2023.csv -o ./data1/wk1/spotify-2023.csv #pulls the csv file and puts it into new directory\n",
+        "!mkdir data1 #new directory called data1\n",
+        "!mkdir ./data1/wk1\n",
+        "!curl https://storage.googleapis.com/qm2/wk1/spotify-2023.csv -o ./data1/wk1/spotify-2023.csv #pulls the csv file and puts it into new directory\n",
         "\n",
         "data1 = pandas.read_csv('./data1/wk1/spotify-2023.csv') #converts csv file into a dataset on python, using pandas\n",
         "\n",
